--- a/src/main/resources/templates/proposta/propostaPdfs.html
+++ b/src/main/resources/templates/proposta/propostaPdfs.html
@@ -14,7 +14,6 @@
 			var path0= window.location.href;
 			var path= path0.substring(0, path0.length - 10)
 			var bimestre= [[${avaliacao}]];
-			console.log("dkjsnakjdna");
 		   	if(bimestre == 1){
 		 	   	window.open(path + "/show/1", "_blank", "");
 		       	window.open(path + "/show/2", "_blank", "");
@@ -22,7 +21,7 @@
 		   	}else{
 			  	window.open(path + "/show/1", "_blank", "");
 		   	}
-	   	window.open("/gtcc/home", "_self" );
+	   	window.open("/gtcc/proposta?sucesso=true", "_self" );
 		}
         </script>
 	</section>
