--- a/src/main/resources/templates/declaracoes/cadastro.html
+++ b/src/main/resources/templates/declaracoes/cadastro.html
@@ -7,16 +7,17 @@
 <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}" />
 </head>
 <body>
-	<section layout:fragment="content">
+	<section layout:fragment="content" class="main-content">
 		<div id="wrap" class="container">
 			<div id="main">
 				<div class="jumbotron">
-					<div class="row justify-content-center" style="width: 500px">
+					<div class="row justify-content-center">
 						<h3>Cadastro de Declarações</h3>
 					</div>
 					<hr />
 					<!-- MESSAGES -->
-					<form th:object="${fichaIdentificacaos}" autocomplete="off" th:action="@{/gtcc/declaracoes/salvar/}";
+					<form th:object="${fichaIdentificacaos}" autocomplete="off"
+						th:action="@{/gtcc/declaracoes/salvar/}" method="POST"
 						class="form-default form-horizontal" name="form">
 
 						<div class="form-group row justify-content-center">
@@ -49,8 +50,9 @@
 						</div>
 						<div class="form-group row justify-content-center">
 							<div class="field-wrapper col-xl-10">
-								<input type="text" name="carga" id="carga" class="form-control"
-									autofocus="autofocus" required aria-describedby="basic-addon1">
+								<input type="number" step="0.01" min="0" name="carga" id="carga"
+									class="form-control" autofocus="autofocus" required
+									aria-describedby="basic-addon1">
 								<div class="field-placeholder">
 									<span>Carga horária*</span>
 								</div>
@@ -61,55 +63,59 @@
 							<h3>Participantes</h3>
 						</div>
 
-<div class="ax aux1">
-			    		  <hr>
-						<div class="form-group row justify-content-center">
-							<div class="field-wrapper col-xl-10">
-								<input type="text" name="nome" id="nome1" class="form-control"
-									autofocus="autofocus" required aria-describedby="basic-addon1">
-								<div class="field-placeholder">
-									<span>Nome Completo*</span>
+						<div class="ax aux1">
+							<hr>
+							<div class="form-group row justify-content-center">
+								<div class="field-wrapper col-xl-10">
+									<input type="text" name="nome[]" id="nome1"
+										class="form-control" autofocus="autofocus" required
+										aria-describedby="basic-addon1">
+									<div class="field-placeholder">
+										<span>Nome Completo*</span>
+									</div>
 								</div>
 							</div>
-						</div>
 
-						<div class="form-group row justify-content-center">
-							<div class="field-wrapper col-xl-10">
-								<input type="text" name="ra" id="ra1" class="form-control"
-									autofocus="autofocus" required aria-describedby="basic-addon1">
-								<div class="field-placeholder">
-									<span>RA*</span>
+							<div class="form-group row justify-content-center">
+								<div class="field-wrapper col-xl-10">
+									<input type="text" name="ra[]" id="ra1" class="form-control"
+										autofocus="autofocus" required aria-describedby="basic-addon1">
+									<div class="field-placeholder">
+										<span>RA*</span>
+									</div>
 								</div>
 							</div>
-						</div>
 
-						<div class="form-group row justify-content-center">
-							<div class="field-wrapper col-xl-10">
-								<input type="text" name="curso" id="curso1" class="form-control"
-									autofocus="autofocus" required aria-describedby="basic-addon1">
-								<div class="field-placeholder">
-									<span>Curso que está cursando*</span>
+							<div class="form-group row justify-content-center">
+								<div class="field-wrapper col-xl-10">
+									<input type="text" name="curso[]" id="curso1"
+										class="form-control" autofocus="autofocus" required
+										aria-describedby="basic-addon1">
+									<div class="field-placeholder">
+										<span>Curso que está cursando*</span>
+									</div>
 								</div>
 							</div>
-						</div>
-						<div style="margin: 10px 50px">
-							<input type="button" value="Remover"  class="ex btn btn-danger btn-xs btn-block"/>
-						</div>
+							<div style="margin: 10px 50px">
+								<input type="button" value="Remover"
+									class="ex btn btn-danger btn-xs btn-block" />
+							</div>
 						</div>
 
 						<div class="hidden"></div>
 
 						<div style="margin: 10px 50px">
-							<input type="button" id="add" value="Adicionar" class="btn btn-success btn-xs btn-block">
+							<input type="button" id="add" value="Adicionar"
+								class="btn btn-success btn-xs btn-block">
 						</div>
 
 
 						<br>
-							<div class="form-group row justify-content-center">
-								<div class="input-group col-xl-10">
-									<label>* Esses campos são obrigatórios</label>
-								</div>
+						<div class="form-group row justify-content-center">
+							<div class="input-group col-xl-10">
+								<label>* Esses campos são obrigatórios</label>
 							</div>
+						</div>
 
 						<hr />
 						<div class="form-group row justify-content-center ">
@@ -131,8 +137,16 @@
 			<div id="push"></div>
 		</div>
 		
-		<script  th:inline="javascript">
+		<script th:inline="javascript">
 			var fichas= [[${fichaIdentificacaos}]];
+			
+			window.onload = function(){
+				var titulo = fichas[0].tituloTrabalho;
+				document.getElementById("nomeReadOnly").value = titulo;
+		        if([[${param.sucesso}]]=='true'){
+		  			alertify.success('Declaração cadastrado com sucesso!');
+		        }
+			}
 		
 		</script>
 
@@ -140,11 +154,6 @@
 			var cont = 1;
 			var total =1;
 			var listaParticipantes;
-			
-			window.onload = function(){
-				var titulo = fichas[0].tituloTrabalho;
-				document.getElementById("nomeReadOnly").value = titulo;
-			}
 			
 			$(document).on('change', '[name=alunoS]', function(){
 				var titulo = fichas[$(this).val()-1].tituloTrabalho;
@@ -164,6 +173,7 @@
 				cont = cont + 1;
 				total = total +1
 				$('.hidden').append(insertParticipante);
+
 			});
 			
 			var insertParticipante = function() {
@@ -171,19 +181,19 @@
 			    		  '<hr>'+
 			    		  '<div class="form-group row justify-content-center">'+
 					'<div class="field-wrapper col-xl-10">'+
-					'<input type="text" name="nome" id="nome'+cont+'" placeholder="Nome do Completo*"  class="form-control" autofocus="autofocus" required aria-describedby="basic-addon1">'+
+					'<input type="text" name="nome[]" id="nome'+cont+'" placeholder="Nome do Completo*"  class="form-control" autofocus="autofocus" required aria-describedby="basic-addon1">'+
 				'</div>'+
 			'</div>'+
 			
 			'<div class="form-group row justify-content-center">'+
 				'<div class="field-wrapper col-xl-10">'+
-					'<input type="text" name="ra" id="ra'+cont+'" placeholder="RA*" class="form-control" autofocus="autofocus" required aria-describedby="basic-addon1">'+
+					'<input type="text" name="ra[]" id="ra'+cont+'" placeholder="RA*" class="form-control" autofocus="autofocus" required aria-describedby="basic-addon1">'+
 				'</div>'+
 			'</div>'+
 			
 			'<div class="form-group row justify-content-center">'+
 			'<div class="field-wrapper col-xl-10">'+
-				'<input type="text" name="curso" id="curso'+cont+'" placeholder="Curso que está cursando*" class="form-control" autofocus="autofocus" required aria-describedby="basic-addon1">'+
+				'<input type="text" name="curso[]" id="curso'+cont+'" placeholder="Curso que está cursando*" class="form-control" autofocus="autofocus" required aria-describedby="basic-addon1">'+
 				'<div class="field-placeholder">'+
 			'	</div>'+
 		'	</div>'+
@@ -194,13 +204,6 @@
 			'</div>'
 			      );
 			  }
-			
-			function Participante(nome, ra, curso) {
-				this.nome = nome;
-				this.ra = ra;
-				this.curso = curso;
-			  }
-		
 		</script>
 
 	</section>
